<?xml version="1.0"?>

<resources>

    <string name="app_name">Restaurant Manager</string>

    <string name="welcome">Welcome</string>

    <string name="not_existing_user">Not Existing User?</string>

    <string name="reset_password">Reset Password</string>

    <string name="need_help">Need Help?</string>

    <string name="login">Login</string>

    <string name="email">Email</string>

    <string name="password">Password</string>

    <string name="reset">Reset</string>

    <string name="mobile">Mobile</string>

    <string name="address">Address</string>

    <string name="sign_up">Sign Up</string>

    <string name="register">Register</string>

    <string name="food">Food</string>

    <string name="account">Account</string>

    <string name="search">Search</string>
    <string name="manage_account">Manage Account</string>
    <string name="reservation">Reservation</string>
    <string name="cart">Cart</string>
    <string name="update">Update</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="items">Your Items</string>
    <string name="browse_food"><u>Browse Food</u></string>
    <string name="your_orders">Your Orders</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="delivery">Delivery</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>