<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/base_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:padding="10dp"
        android:text="@string/welcome"
        android:textSize="50sp"
        app:fontFamily="sans-serif-condensed-light" />

    <Button
        android:id="@+id/base_loginBtn"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/button_shape"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-light" />

    <TextView
        android:id="@+id/base_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/not_existing_user"
        android:textSize="15sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-light" />

    <TextView
        android:id="@+id/base_registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="25dp"
        android:layout_toEndOf="@+id/base_text3"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-light" />


    <TextView
        android:id="@+id/base_partnerupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="Partner Up!"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-light" />

</RelativeLayout>