<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/cust_acc_changepass_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="10dp"
        android:text="@string/change_password"
        android:textSize="50sp"
        app:fontFamily="sans-serif-condensed-light"
        android:layout_marginBottom="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cust_acc_changepass_layout1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_below="@+id/cust_acc_changepass_name_text"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cust_acc_changepass_password1_edit"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="match_parent"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.!#$%&amp;'*+-/=?^_`{|"
            android:textColor="@color/colorBlack"
            app:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/new_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changepassword_textlayout_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cust_acc_changepass_layout1"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cust_acc_changepass_password2_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.!#$%&amp;'*+-/=?^_`{|"
            android:textColor="@color/colorBlack"
            app:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/confirm_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cust_acc_changepass_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changepassword_textlayout_2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_shape"
        android:text="@string/update"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:fontFamily="sans-serif-condensed-light" />


</RelativeLayout>